5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1828_1642.log
== SUBMITION (2019-06-12 14:22:03) 
-- CODE:
from numpy import*

v = array(eval(input("")))

qtd = 0
for i in range(len(v))
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)
	
-- EXECUTION TIME:
0.769428
-- ERROR:
  File "/home/codebench/codes/1828/1642/main.py", line 6
    for i in range(len(v))
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:22:06) 
-- CODE:
from numpy import*

v = array(eval(input("")))

qtd = 0
for i in range(len(v))
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)
	
-- EXECUTION TIME:
0.587849
-- ERROR:
  File "/home/codebench/codes/1828/1642/main.py", line 6
    for i in range(len(v))
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:22:06) 
-- CODE:
from numpy import*

v = array(eval(input("")))

qtd = 0
for i in range(len(v))
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)
	
-- ERROR:
File "XXXX", line 6
    for i in range(len(v))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:22:50) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v))
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)
	
-- EXECUTION TIME:
0.587598
-- ERROR:
  File "/home/codebench/codes/1828/1642/main.py", line 5
    for i in range(len(v))
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:23:09) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)
	
-- EXECUTION TIME:
0.972693
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[1 1 1 1 1]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:23:11) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:24:29) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)	
-- EXECUTION TIME:
1.07445
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[1 1 1 1 1]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:24:47) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)	
-- EXECUTION TIME:
1.44308
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[1 1 1 1 1]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:24:48) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)	
-- EXECUTION TIME:
3.19039
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
5
[1 1 1 1 1]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[1 1 1 1 1]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:24:50) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)	
-- EXECUTION TIME:
6.0125
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
5
[1 1 1 1 1]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[1 1 1 1 1]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:24:51) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)	
-- EXECUTION TIME:
2.32157
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[1 1 1 1 1]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:24:52) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)	
-- EXECUTION TIME:
9.28795
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
5
[1 1 1 1 1]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
4
[1 1 1 1]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:24:52) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)	
-- EXECUTION TIME:
9.57685
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
5
[1 1 1 1 1]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
4
[1 1 1 1]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
6
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:24:57) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)	
-- EXECUTION TIME:
4.85039
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[1 1 1 1 1]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:24:59) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)	
-- EXECUTION TIME:
3.77104
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[1 1 1 1 1]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:24:59) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]%5 == 0 :
		qtd = qtd + 1
v2 = zeros(qtd, dtype = int)
c = 0
for i in range(len(v)):
	if v[i]%5 == 0:
		v2[c] = 1
		c = c + 1
print(qtd)
print(v2)	
-- EXECUTION TIME:
2.3842
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1828/1642/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
